Fiber selection and movement using the Joystick

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,8 @@
         "pio_matrix.pio.h": "c",
         "led_matrix.h": "c",
         "pio.h": "c",
-        "buttons.h": "c"
+        "buttons.h": "c",
+        "variant": "c",
+        "drawings.h": "c"
     }
 }
