LED signaling for fiber positioning

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "pio.h": "c",
         "buttons.h": "c",
         "variant": "c",
-        "drawings.h": "c"
+        "drawings.h": "c",
+        "cstdint": "c"
     }
 }
