Fiber positioning audio alert

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
         "joystick.h": "c",
         "general.h": "c",
         "i2c.h": "c",
-        "display.h": "c"
+        "display.h": "c",
+        "buzzer.h": "c"
     }
 }
